--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 title: Hank Quinlan, Horrible Cop
+info: Dancer, traveler, philosopher
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Hank Quinlan!</h1>
+	{{ page.info }}
 	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
